--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,9 +1,9 @@
 {
     "appName": {
-        "message": "Управление Яндекс музыкой"
+        "message": "Управление Яндекс Музыкой"
     },
     "appDesc": {
-        "message": "Управление Яндекс музыкой"
+        "message": "Управление Яндекс Музыкой"
     },
     "shortName": {
         "message": "Яндекс Музыка"
@@ -31,6 +31,48 @@
     },
     "writeLetter": {
         "message": "Написать "
+    },
+    "yes": {
+        "message": "Да"
+    },
+    "no": {
+        "message": "Нет"
+    },
+    "new": {
+        "message": "Новая вкладка 'Яндекс Музыка'"
+    },
+    "appDetected": {
+        "message": "Приложение обнаружило вкладку 'Яндекс Музыка', но не может подключиться к вкладке!"
+    },
+    "appQuestion": {
+        "message": "Перезагрузить вкладку или открыть новую?"
+    },
+    "appNoDetected": {
+        "message": "Вкладка 'Яндекс Музыка' не найдена!"
+    },
+    "appNoQuestion": {
+        "message": "Открыть новую вкладку 'Яндекс Музыка'?"
+    },
+    "waitWhilePage": {
+        "message": "Подождите пока страница загружается!"
+    },
+    "liked": {
+        "message": "Добавлено в избранное!"
+    },
+    "disliked": {
+        "message": "Удалено из избранного!"
+    },
+    "settings": {
+        "message": "Настройки"
+    },
+    "showNotify": {
+        "message": "Показывать уведомления при управлении клавиатурой: "
+    },
+    "playPauseNotify": {
+        "message": "Уведомление при нажатии 'пауза / играть'."
+    },
+    "prevNextNotify": {
+        "message": "Уведомление переключения трека."
     }
 
 }
