--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -54,7 +54,7 @@
         "message": "Open the new tab of 'Yandex Music'?"
     },
     "waitWhilePage": {
-        "message": "Wait while page is loading!"
+        "message": "Wait while page loading!"
     },
     "liked": {
         "message": "Added to my favorites!"
