--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -69,7 +69,7 @@
         "message": "Показывать уведомления при управлении клавиатурой: "
     },
     "playPauseNotify": {
-        "message": "Уведомление при нажатии 'пауза / играть'."
+        "message": "Уведомление когда нажата 'пауза / играть'."
     },
     "prevNextNotify": {
         "message": "Уведомление переключения трека."
