--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -3,10 +3,13 @@
         "message": "Управление Яндекс Музыкой"
     },
     "appDesc": {
-        "message": "Управление Яндекс Музыкой"
+        "message": "Управляйте своей музыкой из любого приложения! Интегрируется с операционными системами Windows и Linux."
     },
     "shortName": {
         "message": "Яндекс Музыка"
+    },
+    "version": {
+        "message": "Версия"
     },
     "title": {
         "message": "Яндекс Музыка"
@@ -73,6 +76,9 @@
     },
     "prevNextNotify": {
         "message": "Уведомление переключения трека."
+    },
+    "inNewVersion": {
+        "message": "Теперь вы можете нажать на уведомление, чтобы перейти к следующему треку!"
     }
 
 }
