--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -78,7 +78,7 @@
         "message": "Уведомление переключения трека."
     },
     "inNewVersion": {
-        "message": "Теперь вы можете нажать на уведомление, чтобы перейти к следующему треку!"
+        "message": "Улучшена перемотка!"
     }
 
 }
