--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -77,6 +77,9 @@
     "prevNextNotify": {
         "message": "Notification when previous / next track."
     },
+    "whatNew": {
+        "message": "What's new?"
+    },
     "inNewVersion": {
         "message": "Improved rewind!"
     }
