--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -77,6 +77,9 @@
     "prevNextNotify": {
         "message": "Уведомление переключения трека."
     },
+    "whatNew": {
+        "message": "Что нового?"
+    },
     "inNewVersion": {
         "message": "Улучшена перемотка!"
     }
