--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -44,6 +44,9 @@
     "no": {
         "message": "Нет"
     },
+    "reload": {
+        "message": "Перезагрузить"
+    },
     "new": {
         "message": "Новая вкладка 'Яндекс Музыка'"
     },
@@ -51,7 +54,7 @@
         "message": "Приложение обнаружило вкладку 'Яндекс Музыка', но не может подключиться к вкладке!"
     },
     "appQuestion": {
-        "message": "Перезагрузить вкладку или открыть новую?"
+        "message": "Приложению нужно перезагрузить вкладку или открыть новую."
     },
     "appNoDetected": {
         "message": "Вкладка 'Яндекс Музыка' не найдена!"
