--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -54,13 +54,13 @@
         "message": "Приложение обнаружило вкладку 'Яндекс Музыка', но не может подключиться к вкладке!"
     },
     "appQuestion": {
-        "message": "Приложению нужно перезагрузить вкладку или открыть новую."
+        "message": "Нужно перезагрузить вкладку или открыть новую."
     },
     "appNoDetected": {
-        "message": "Вкладка 'Яндекс Музыка' не найдена!"
+        "message": "Вкладка 'Яндекс.Музыка' не найдена!"
     },
     "appNoQuestion": {
-        "message": "Открыть новую вкладку 'Яндекс Музыка'?"
+        "message": "Открыть новую вкладку 'Яндекс.Музыка'?"
     },
     "waitWhilePage": {
         "message": "Подождите пока страница загружается!"
