--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -100,6 +100,25 @@
     },
     "removeFromBlackList": {
         "message": "Теперь трек сможет появляться в ваших рекомендациях!"
+    },
+    "noShortcutSelected": {
+        "message": "Сначала выберите горячую клавишу!"
+    },
+    "noShortcutKeyAction": {
+        "message": "Для этого действия не задана комбинация клавиш! Не забудьте установить в настройках вашого браузера."
+    },
+    "checkBoxSavePos": {
+        "message": "Сохранять положение и размер всплывающего окна."
+    },
+    "shortcutKeyOpenPopup": {
+        "message": "Выберите комбинацию клавиш, чтобы открыть и активировать всплывающее окно. (Комбинация клавиш по умолчанию будет переназначена)."
+    },
+    "checkBoxReassign": {
+        "message": "Следующая комбинация клавиш будет переназначена -"
+    },
+    "selectedShortcutKey": {
+        "message": "Выберите из списка ниже."
     }
+
 
 }
