--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -44,6 +44,9 @@
     "no": {
         "message": "Нет"
     },
+    "continue": {
+        "message": "Продолжить"
+    },
     "reload": {
         "message": "Перезагрузить"
     },
@@ -105,7 +108,10 @@
         "message": "Сначала выберите горячую клавишу!"
     },
     "noShortcutKeyAction": {
-        "message": "Для этого действия не задана комбинация клавиш! Не забудьте установить в настройках вашого браузера."
+        "message": "Для этого действия не задана комбинация клавиш! Не забудьте установить сочетание клавиш. Также, после назначения клавиш, для их корректной работы может потребоваться перезагрузка браузера."
+    },
+    "isNoKeyAction": {
+        "message": "Для этого действия не задана комбинация клавиш!"
     },
     "checkBoxSavePos": {
         "message": "Сохранять положение и размер всплывающего окна."
@@ -113,11 +119,26 @@
     "shortcutKeyOpenPopup": {
         "message": "Выберите комбинацию клавиш, чтобы открыть и активировать всплывающее окно. (Комбинация клавиш по умолчанию будет переназначена)."
     },
-    "checkBoxReassign": {
-        "message": "Следующая комбинация клавиш будет переназначена -"
+    "checkBoxReassignFirstHalf": {
+        "message": "Теперь сочетание клавиш, которое используется как '"
+    },
+    "checkBoxReassignSecondHalf": {
+        "message": "' будет использоваться для открытия всплывающего окна."
+    },
+    "openPopup": {
+        "message": "Открыть всплывающее окно<br>'"
     },
     "selectedShortcutKey": {
         "message": "Выберите из списка ниже."
+    },
+    "successfullyCreated": {
+        "message": "Окно успешно создано!"
+    },
+    "windowAlreadyExists": {
+        "message": "Окно уже существует!"
+    },
+    "allNotifications": {
+        "message": "Уведомление каждый раз при переключении трека."
     }
 
 
