--- a/extension/_locales/ru/messages.json
+++ b/extension/_locales/ru/messages.json
@@ -78,16 +78,25 @@
         "message": "Настройки"
     },
     "showNotify": {
-        "message": "Показывать уведомления при управлении клавиатурой: "
+        "message": "Уведомления при нажатии клавиш на клавиатуре: "
     },
     "playPauseNotify": {
-        "message": "Уведомление когда нажата 'пауза / играть'."
+        "message": "Пауза / играть."
     },
     "prevNextNotify": {
-        "message": "Уведомление переключения трека."
+        "message": "Предыдущий / следующий трек."
     },
-    "setDarkTheme": {
-        "message": "Включить темную тему."
+    "selectTheme": {
+        "message": "Выберите цветовую тему:"
+    },
+    "defaultTheme": {
+        "message": "По умолчанию"
+    },
+    "lightTheme": {
+        "message": "Светлая"
+    },
+    "darkTheme": {
+        "message": "Темная"
     },
     "increaseCover": {
         "message": "Уменьшить кнопки управления и увеличить обложку."
@@ -138,7 +147,7 @@
         "message": "Окно уже существует!"
     },
     "allNotifications": {
-        "message": "Уведомление каждый раз при переключении трека."
+        "message": "Уведомление каждый раз, когда трек меняется."
     }
 
 
