--- a/extension/_locales/ru/messages.json
+++ b/extension/_locales/ru/messages.json
@@ -99,13 +99,13 @@
         "message": "Темная"
     },
     "increaseCover": {
-        "message": "Уменьшить кнопки управления и увеличить обложку."
+        "message": "Уменьшить кнопки управления и увеличить обложку"
     },
     "whatNew": {
         "message": "Что нового?"
     },
     "addDislikeButton": {
-        "message": "Добавить кнопку дизлайка?"
+        "message": "Добавить кнопку дизлайка"
     },
     "addedToBlackList": {
         "message": "Трек больше не будет появляться в ваших рекомендациях!"
