--- a/extension/_locales/en/messages.json
+++ b/extension/_locales/en/messages.json
@@ -36,7 +36,7 @@
         "message": "Say thanks to the developer"
     },
     "writeLetter": {
-        "message": "Any questions write to "
+        "message": "Write to: "
     },
     "yes": {
         "message": "Yes"
