--- a/extension/_locales/ru/messages.json
+++ b/extension/_locales/ru/messages.json
@@ -44,6 +44,9 @@
     "no": {
         "message": "Нет"
     },
+    "cancel": {
+        "message": "Отмена"
+    },
     "continue": {
         "message": "Продолжить"
     },
@@ -99,10 +102,10 @@
         "message": "Темная"
     },
     "increaseCover": {
-        "message": "Уменьшить кнопки управления и увеличить обложку"
+        "message": "Уменьшить кнопки управления и увеличить изображение"
     },
     "whatNew": {
-        "message": "Что нового?"
+        "message": "Что нового"
     },
     "addDislikeButton": {
         "message": "Добавить кнопку дизлайка"
@@ -121,9 +124,6 @@
     },
     "isNoKeyAction": {
         "message": "Для этого действия не задана комбинация клавиш!"
-    },
-    "checkBoxSavePos": {
-        "message": "Сохранять положение и размер всплывающего окна."
     },
     "shortcutKeyOpenPopup": {
         "message": "Выберите комбинацию клавиш, чтобы открыть и активировать всплывающее окно. (Комбинация клавиш по умолчанию будет переназначена)."
@@ -147,7 +147,7 @@
         "message": "Окно уже существует!"
     },
     "allNotifications": {
-        "message": "Уведомление каждый раз, когда трек меняется."
+        "message": "Уведомление каждый раз, когда трек меняется"
     },
     "repeatOf": {
         "message": "Повтор выключен"
@@ -166,7 +166,47 @@
     },
     "playlistEmpty": {
         "message": "Ваш плейлист пуст!"
+    },
+    "stepChange": {
+        "message": "Шаг изменения при прокрутке роликом:"
+    },
+    "secondsPosition": {
+        "message": "секунды:"
+    },
+    "interestVolume": {
+        "message": "громкость:"
+    },
+    "showMmore": {
+        "message": "Показать больше"
+    },
+    "hide": {
+        "message": "Скрыть"
+     },
+    "pinTab": {
+        "message": "Автозакрепление вкладки Яндекс.Музыка"
+    },
+    "pinTabNow": {
+        "message": "Закрепить вкладку?"
+    },
+    "tabPinned": {
+        "message": "Вкладка закреплена"
+    },
+    "unpinTab": {
+        "message": "Открепить вкладку?"
+    },
+    "tabUnpinned": {
+        "message": "Вкладка откреплена"
+    },
+    "previousPopupSize": {
+        "message": "Предыдущий размер всплывающего окна:"
+    },
+    "defaultPopupSize": {
+        "message": "Размер всплывающего окна по умолчанию:"
+    },
+    "usePrevSize": {
+        "message": "Использовать предыдущий размер всплывающего окна"
+    },
+    "useCurrnetSize": {
+        "message": "Использовать текущий размер всплывающего окна"
     }
-
-
 }
