--- a/extension/_locales/ru/messages.json
+++ b/extension/_locales/ru/messages.json
@@ -3,7 +3,7 @@
         "message": "Управление Яндекс Музыкой"
     },
     "appDesc": {
-        "message": "Управляйте своей музыкой из любого приложения! Интегрируется с операционными системами Windows и Linux."
+        "message": "Управляйте своей музыкой из любого приложения! Вы можете создать всплывающее окно с плеером или открыть его на боковой панели."
     },
     "shortName": {
         "message": "Яндекс Музыка"
@@ -40,9 +40,6 @@
     },
     "yes": {
         "message": "Да"
-    },
-    "no": {
-        "message": "Нет"
     },
     "cancel": {
         "message": "Отмена"
@@ -84,10 +81,10 @@
         "message": "Уведомления при нажатии клавиш на клавиатуре: "
     },
     "playPauseNotify": {
-        "message": "Пауза / играть."
+        "message": "Пауза / играть"
     },
     "prevNextNotify": {
-        "message": "Предыдущий / следующий трек."
+        "message": "Предыдущий / следующий трек"
     },
     "selectTheme": {
         "message": "Выберите цветовую тему:"
@@ -100,9 +97,6 @@
     },
     "darkTheme": {
         "message": "Темная"
-    },
-    "increaseCover": {
-        "message": "Уменьшить кнопки управления и увеличить изображение"
     },
     "whatNew": {
         "message": "Что нового"
@@ -126,19 +120,19 @@
         "message": "Для этого действия не задана комбинация клавиш!"
     },
     "shortcutKeyOpenPopup": {
-        "message": "Выберите комбинацию клавиш, чтобы открыть и активировать всплывающее окно. (Комбинация клавиш по умолчанию будет переназначена)."
+        "message": "Выберите сочетание клавиш, чтобы открыть и активировать всплывающее окно. (Сочетание клавиш на действие по умолчанию будет переназначено)"
     },
     "checkBoxReassignFirstHalf": {
         "message": "Теперь сочетание клавиш, которое используется как '"
     },
     "checkBoxReassignSecondHalf": {
-        "message": "' будет использоваться для открытия всплывающего окна."
+        "message": "' будет использоваться для открытия всплывающего окна"
     },
     "openPopup": {
         "message": "Открыть всплывающее окно<br>'"
     },
     "selectedShortcutKey": {
-        "message": "Выберите из списка ниже."
+        "message": "Выберите из списка ниже"
     },
     "successfullyCreated": {
         "message": "Окно успешно создано!"
