--- a/extension/_locales/ru/messages.json
+++ b/extension/_locales/ru/messages.json
@@ -202,5 +202,14 @@
     },
     "useCurrnetSize": {
         "message": "Использовать текущий размер всплывающего окна"
+    },
+    "width": {
+        "message": "ширина:"
+    },
+    "height": {
+        "message": "высота:"
+    },
+    "openInCurrentTab": {
+        "message": "Открыть в текущей вкладке."
     }
 }
