reduced the length of the string "shortName" for ms store

--- a/extension/_locales/en/messages.json
+++ b/extension/_locales/en/messages.json
@@ -3,7 +3,7 @@
         "message": "Yandex Music control"
     },
     "appDesc": {
-        "message": "Control your music from any app! You can create a pop-up window with the player or open it in the sidebar."
+        "message": "Control Yandex music from any app! You can create a pop-up window with the player or open it in the sidebar."
     },
     "shortName": {
         "message": "Yandex Music"
