--- a/extension/_locales/ru/messages.json
+++ b/extension/_locales/ru/messages.json
@@ -3,10 +3,10 @@
         "message": "Управление Яндекс Музыкой"
     },
     "appDesc": {
-        "message": "Управляйте своей музыкой из любого приложения! Вы можете создать всплывающее окно с плеером или открыть его на боковой панели."
+        "message": "Управляйте Яндекс музыкой из любого приложения! Вы можете создать всплывающее окно с плеером или открыть его на боковой панели."
     },
     "shortName": {
-        "message": "Яндекс Музыка"
+        "message": "Yandex Music"
     },
     "version": {
         "message": "Версия"
