--- a/extension/_locales/ru/messages.json
+++ b/extension/_locales/ru/messages.json
@@ -178,7 +178,7 @@
     },
     "hide": {
         "message": "Скрыть"
-     },
+    },
     "pinTab": {
         "message": "Автозакрепление вкладки Яндекс.Музыка"
     },
@@ -223,5 +223,20 @@
     },
     "repeatClick2Half": {
         "message": "секунд убирает лайк"
+    },
+    "labelTrackInfo": {
+        "message": "Сохранить информацию о текущем треке в .txt"
+    },
+    "labelTrackArtists": {
+        "message": "название трека и исполнитель"
+    },
+    "labelCurrentTime": {
+        "message": "текущее время воспроизведения"
+    },
+    "labelSaveImg": {
+        "message": "Сохранить обложку как .jpg"
+    },
+    "additionalInfo": {
+        "message": "Поле имени файла может содержать путь относительно каталога 'Загрузки', где находится загружаемый файл, включая подкаталоги. Абсолютные пути, пустые пути и пути, содержащие обратные кавычки (..), приведут к ошибке."
     }
 }
